# persian_news_websites_crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt
crawlers/: tabnak_crawler.py
crawlers/scrapy/TabnakNews/: scrapy.cfg  tabnak_news_test.json  test_csv.ipynb
crawlers/scrapy/TabnakNews/TabnakNews/: items.py  middlewares.py  pipelines.py  settings.py
crawlers/scrapy/TabnakNews/TabnakNews/spiders/: entekhab.py  irna_archive_crawler.py  tabnak_spider.py
